style.css
/* ... */
#li-mw-ro-tv-hitbox {
    position: absolute;
    top: 39%;
    left: 27%;
    width: 28%;
    height: 16%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#li-wr-tvo-hitbox {
    position: absolute;
    top: 47%;
    left: 24%;
    width: 26%;
    height: 21%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#li-tv-wr-tv-hitbox {
    position: absolute;
    top: 24%;
    left: 18%;
    width: 67%;
    height: 51%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#li-tv-wr-tvo-hitbox {
    position: absolute;
    top: 24%;
    left: 19%;
    width: 67%;
    height: 54%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#li-tv-tvo-wr-hitbox {
    position: absolute;
    top: 79%;
    left: 44%;
    width: 13%;
    height: 7%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#li-tv-on-hitbox {
    position: absolute;
    top: 22%;
    left: 14%;
    width: 72%;
    height: 55%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}



/* ---- LIBRARY OFFICE PAGES */

#li-office-door-closed-hitbox {
    position: absolute;
    top: 0%;
    left: 29%;
    width: 42%;
    height: 95%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#li-office-door-open-hitbox {
    position: absolute;
    top: 0%;
    left: 29%;
    width: 42%;
    height: 95%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-main-left-ls-entrance-hitbox {
    position: absolute;
    top: 0%;
    left: 7%;
    width: 34%;
    height: 96%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-storage-entrance-hitbox {
    position: absolute;
    top: 0%;
    left: 26%;
    width: 56%;
    height: 99%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-main-right-desk-hitbox {
    position: absolute;
    top: 33%;
    left: 34%;
    width: 48%;
    height: 39%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-desk-hitbox {
    position: absolute;
    top: 23%;
    left: 63%;
    width: 30%;
    height: 45%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-desk-monitor-hitbox {
    position: absolute;
    top: 40%;
    left: 66%;
    width: 25%;
    height: 21%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-monitor-hitbox {
    position: absolute;
    top: 22%;
    left: 14%;
    width: 72%;
    height: 55%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#lo-monitor-drive-hitbox {
    position: absolute;
    top: 20%;
    left: 8%;
    width: 15%;
    height: 55%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 1100;
}

/* -------- LIBRARY STORAGE PAGES -----------*/

#ls-lo-entrance-hitbox {
    position: absolute;
    top: 0%;
    left: 20%;
    width: 55%;
    height: 99%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#ls-archives-mcduffie-hitbox {
    position: absolute;
    top: 38%;
    left: 63%;
    width: 5%;
    height: 16%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#ls-archives-black-hitbox {
    position: absolute;
    top: 0%;
    left: 49%;
    width: 4%;
    height: 18%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#ls-archives-harrell-hitbox {
    position: absolute;
    top: 19%;
    left: 48%;
    width: 5%;
    height: 17%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#ls-archives-keser-hitbox {
    position: absolute;
    top: 37%;
    left: 39%;
    width: 2%;
    height: 17%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}

#ls-archives-sk-hitbox {
    position: absolute;
    top: 59%;
    left: 20%;
    width: 25%;
    height: 31%;

    background-color: transparent;
    border: 2px solid transparent;
    cursor: pointer; /* makes 'hand' icon so players know to click */
    z-index: 10;
}
/* ... */

